Update bespin_lando_worker role to install lando from PyPI

--- a/bespin_lando_worker/tasks/main.yml
+++ b/bespin_lando_worker/tasks/main.yml
@@ -12,8 +12,8 @@
     - nodejs
 
 - pip:
-    name: "git+git://github.com/Duke-GCB/lando.git@{{ lando_version }}"
-    editable: false
+    name: lando
+    version: "{{ lando_version }}"
     executable: pip3
 
 - name: Check where lando_worker has been installed to
