--- a/bespin_lando_worker/defaults/main.yml
+++ b/bespin_lando_worker/defaults/main.yml
@@ -1,4 +1,5 @@
-lando_version: master
+lando_install_source: PyPI
+lando_github_version: master
 cwl_runner: cwltool
 cwl_runner_version: latest
 lando_work_directory: /work
