--- a/bespin_lando_k8s/tasks/main.yml
+++ b/bespin_lando_k8s/tasks/main.yml
@@ -1,30 +1,7 @@
-- set_fact:
-    lando_config_path: "/etc/lando_{{ k8s_cluster_name }}_config.yml"
-    lando_k8s: "{{ bespin_settings.k8s_clusters[k8s_cluster_name] }}"
-
-- name: Setup lando config
-  template:
-    src: lando_k8s_config.yml.j2
-    dest: "{{ lando_config_path }}"
-
-- name: Create lando kubernetes job runner container
-  docker_container:
-    image: "{{ bespin_settings.lando.build.image_name }}:{{ bespin_settings.lando.build.version }}"
-    name: "bespin-lando-k8s-{{ k8s_cluster_name }}"
-    volumes:
-      - "{{ lando_config_path }}:{{ lando_config_path }}"
-    etc_hosts: "{{ bespin_hosts_list }}"
-    state: started
-    restart_policy: always
-    command: python -m lando.k8s.lando "{{ lando_config_path }}"
-
-- name: Create lando kubernetes watcher container
-  docker_container:
-    image: "{{ bespin_settings.lando.build.image_name }}:{{ bespin_settings.lando.build.version }}"
-    name: "bespin-watcher-k8s-{{ k8s_cluster_name }}"
-    volumes:
-      - "{{ lando_config_path }}:{{ lando_config_path }}"
-    etc_hosts: "{{ bespin_hosts_list }}"
-    state: started
-    restart_policy: always
-    command: python -m lando.k8s.watcher "{{ lando_config_path }}"
+- name: Create lando k8s services for each item in bespin_settings.k8s_clusters
+  include_tasks: create-services.yml
+  vars:
+    k8s_cluster_name: "{{ item.key }}"
+    lando_config_path: "/etc/lando_{{ item.key }}_config.yml"
+    lando_k8s: "{{ item.value }}"
+  with_dict:  "{{ bespin_settings.k8s_clusters }}"
