Add /download/ to list of locations that should proxy to d4s2 instead of datadelivery-ui

--- a/d4s2_webapp/files/nginx.conf
+++ b/d4s2_webapp/files/nginx.conf
@@ -28,7 +28,7 @@ http {
       proxy_pass http://ui:80;
     }
 
-    location ~ ^/(admin|ownership|auth|api|api-auth|api-auth-token|accounts|static)/  {
+    location ~ ^/(admin|ownership|auth|api|api-auth|api-auth-token|accounts|static|download)/  {
       proxy_pass http://d4s2-app:8000;
       proxy_set_header        Host $host;
       proxy_set_header        X-Real-IP $remote_addr;
