--- a/d4s2_webapp/tasks/main.yml
+++ b/d4s2_webapp/tasks/main.yml
@@ -30,6 +30,8 @@
     pull: false
     state: started
     restart_policy: always
+  notify:
+  - restart web
   tags: ['api']
 - name: Create download service container
   docker_container:
@@ -41,6 +43,8 @@
     pull: false
     state: started
     restart_policy: always
+  notify:
+  - restart web
 - name: Create task processor container
   docker_container:
     image: "{{ d4s2_docker_image }}"
@@ -61,6 +65,8 @@
       - name: "{{ d4s2_docker_network }}"
     state: started
     restart_policy: always
+  notify:
+  - restart web
   tags: ['ui']
 - name: Create reverse proxy web container
   docker_container:
