--- a/bespin_k8s_cluster/tasks/main.yml
+++ b/bespin_k8s_cluster/tasks/main.yml
@@ -1,5 +1,4 @@
-# Expects environment variables specifying ks8 configuration to already be set.
-# For example K8S_AUTH_HOST,  K8S_AUTH_API_KEY, and K8S_AUTH_VERIFY_SSL
+# Expects appropriate environment variables specifying ks8 configuration to already be set.
 # See https://docs.ansible.com/ansible/latest/modules/k8s_module.html
 
 - name: "Create a {{ namespace_name }} namespace"
@@ -17,9 +16,8 @@
     state: present
     namespace: "{{ namespace_name }}"
 
-# NOTE: The response from a new service account above doesn't include secrets
 - name: "Read lando service account"
-  k8s_info:
+  k8s_facts:
     api_version: v1
     kind: ServiceAccount
     name: lando
@@ -30,7 +28,7 @@
     service_account_secret_name: "{{ service_account_response.resources[0]['secrets'][0]['name'] }}"
 
 - name: Fetch lando service account secret details
-  k8s_info:
+  k8s_facts:
     api_version: v1
     kind: Secret
     name: "{{ service_account_secret_name }}"
@@ -115,9 +113,6 @@
 - set_fact:
     stage_system_data_items: "{{ lookup('file', '../../files/bespin-k8s-stage-system-data_small.json') }}"
 
-- debug:
-    msg: "{{ stage_system_data_items | to_json }}"
-
 - name: Create configmap for loading system data volume
   k8s:
     state: present
@@ -135,3 +130,4 @@
     namespace: "{{ namespace_name }}"
     state: present
     definition: "{{ lookup('file', 'k8s-lando-stage-system-data.yml') }}"
+
