--- a/bespin_k8s_gcloud_cluster/tasks/create_file_storage.yml
+++ b/bespin_k8s_gcloud_cluster/tasks/create_file_storage.yml
@@ -1,19 +1,3 @@
-- name: "Connecting to google cloud project {{ gcloud_project_id }}"
-  command: >
-    gcloud config set project
-    "{{ gcloud_project_id }}"
-
-- name: "Enabling file.googleapis.com to allow creating file storage"
-  command: gcloud services enable file.googleapis.com
-
-- name: "Check if file storage named {{ filestore_name }} exists"
-  command: >
-    gcloud filestore instances list
-    --format="value(name)"
-    "--filter=name=projects/{{ gcloud_project_id }}/locations/{{ gcloud_compute_zone }}/instances/{{ filestore_name }}"
-    "--zone={{ gcloud_compute_zone }}"
-  register: find_filestore_result
-
 # The following is based on https://cloud.google.com/community/tutorials/gke-filestore-dynamic-provisioning
 # Create filestore containing a single fileshare that can be mounted ReadWriteMany.
 # Used to store input data, intermediate results, and output data
@@ -22,11 +6,11 @@
     gcloud filestore instances create
     "{{ filestore_name }}"
     "--zone={{ gcloud_compute_zone }}"
-    "--description=Bespin-ReadWriteMany-filestore"
+    "--description={{ filestore_description }}"
     "--tier={{ file_store_tier }}"
-    "--network=name=default"
+    "--network=name={{ filestore_network_name }}"
     "--file-share=name=bespin_fileshare,capacity={{ file_share_capacity }}"
-  when: find_filestore_result.stdout == ""
+  when: not filestore_exists
 
 - name: "Get file storage filestore{{ cluster_name }} IP address"
   command: >
