--- a/bespin_k8s_gcloud_cluster/tasks/update_bespin_api_connection.yml
+++ b/bespin_k8s_gcloud_cluster/tasks/update_bespin_api_connection.yml
@@ -13,3 +13,14 @@
     JOB_FLAVOR_ID: "{{ job_flavor_id }}"
     VOLUME_SIZE_BASE: "{{ volume_size_base }}"
     VOLUME_SIZE_FACTOR: "{{ volume_size_factor }}"
+  when: lando_k8s_state|default('present') == "present"
+
+- name: Disable bespin-api database with settings for the k8s cluster
+  command: >
+    python
+    "{{ role_path }}/files/remove-setup-from-bespin-db.py"
+  environment:
+    BESPIN_API_TOKEN: "{{ bespin_settings.web.lando_token }}"
+    BESPIN_API_URL: "{{ bespin_settings.web.url }}"
+    CLUSTER_NAME: "{{ cluster_name }}"
+  when: lando_k8s_state|default('present') == "absent"
