--- a/bespin_lando_k8s/tasks/main.yml
+++ b/bespin_lando_k8s/tasks/main.yml
@@ -2,7 +2,7 @@
   when: lando_k8s_state|default('present') == "present"
   include_tasks: create-services.yml
   vars:
-    k8s_cluster_name: "{{ item.key }}"
+    k8s_cluster_name: "{{ item.value.cluster_name | default(item.key) }}"
     lando_config_path: "/etc/lando_{{ item.key }}_config.yml"
     lando_k8s: "{{ item.value }}"
   with_dict:  "{{ k8s_clusters }}"
@@ -11,7 +11,7 @@
   when: lando_k8s_state|default('present') == "absent"
   include_tasks: remove-services.yml
   vars:
-    k8s_cluster_name: "{{ item.key }}"
+    k8s_cluster_name: "{{ item.value.cluster_name | default(item.key) }}"
     lando_config_path: "/etc/lando_{{ item.key }}_config.yml"
     lando_k8s: "{{ item.value }}"
   with_dict:  "{{ k8s_clusters }}"
