--- a/bespin_k8s_gcloud_cluster/tasks/create_k8s_cluster.yml
+++ b/bespin_k8s_gcloud_cluster/tasks/create_k8s_cluster.yml
@@ -4,6 +4,7 @@
     --zone "{{ gcloud_compute_zone }}"
     --machine-type "{{ gcloud_machine_type }}"
     --enable-autoscaling
+    --no-enable-autoupgrade
     --num-nodes "{{ gcloud_num_nodes }}"
     --min-nodes "{{ gcloud_min_nodes }}"
     --max-nodes "{{ gcloud_max_nodes }}"
